--- a/article/references.bib
+++ b/article/references.bib
@@ -586,3 +586,14 @@
   issn    = {0005-1098},
   doi     = {10.1016/j.automatica.2021.109503}
 }
+
+@article{Bjørnstad2001,
+  author  = {Bjørnstad, Ottar N. and Grenfell, Bryan T.},
+  title   = {Noisy Clockwork: Time Series Analysis of Population Fluctuations in Animals}, 
+  journal = {Science},
+  volume  = {293}, 
+  pages   = {638--643},
+  year    = {2001},
+  doi     = {10.1126/science.1062226}
+}
+
